--- a/src/view/AddProduct.fxml
+++ b/src/view/AddProduct.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
@@ -8,9 +9,9 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
 
 <AnchorPane id="AnchorPane" prefHeight="396.0" prefWidth="701.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.AddProductController">
 
@@ -49,17 +50,33 @@
       <RadioButton fx:id="rbExclusive" layoutX="556.0" layoutY="276.0" mnemonicParsing="false" text="Exclusivity" />
 
 
-      <Button fx:id="btnAddProduct" layoutX="173.0" layoutY="344.0" mnemonicParsing="false" onAction="#addProduct" prefHeight="25.0" prefWidth="505.0" style="-fx-background-radius: 50; -fx-background-color: #5081b3;" text="Add Product" />
+      <Button fx:id="btnAddProduct" layoutX="173.0" layoutY="344.0" mnemonicParsing="false" onAction="#addProduct" prefHeight="25.0" prefWidth="505.0" style="-fx-background-radius: 50; -fx-background-color: #5081b3;" text="Add Product" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></Button>
 
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#a7c4e5" height="396.0" stroke="TRANSPARENT" strokeType="INSIDE" width="149.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ed90e5" height="44.0" layoutX="14.0" layoutY="31.0" stroke="TRANSPARENT" strokeType="INSIDE" width="122.0" />
-      <Text layoutX="59.0" layoutY="57.0" strokeType="OUTSIDE" strokeWidth="0.0" text="LOGO" />
+
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#5081b3" height="396.0" stroke="TRANSPARENT" strokeType="INSIDE" width="149.0" />
+      
+      <VBox alignment="TOP_CENTER" layoutX="14.0" layoutY="31.0" prefHeight="44.0" prefWidth="122.0" style="-fx-background-color: #5081b3;">
+         <children>
+            <ImageView fitHeight="71.0" fitWidth="124.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/nike-3-64.png" />
+               </image>
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin>
+            </ImageView>
+         </children>
+      </VBox>
 
       <ImageView fitHeight="128.0" fitWidth="135.0" layoutX="173.0" layoutY="35.0">
          <image>
             <Image url="@../images/nike.jpg" />
          </image>
       </ImageView>
+      
       <Button fx:id="backButton" layoutX="611.0" layoutY="19.0" mnemonicParsing="false" onAction="#onBack" prefHeight="26.0" prefWidth="58.0" style="-fx-background-radius: 10; -fx-background-color: #5081b3;" text="Back" textFill="WHITE">
          <font>
             <Font name="System Bold" size="12.0" />
