--- a/src/view/ShoeDetail.fxml
+++ b/src/view/ShoeDetail.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.ContextMenu?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
@@ -124,6 +125,13 @@
                      </children>
                   </AnchorPane>
                </content>
+               <contextMenu>
+                  <ContextMenu>
+                    <items>
+                      <MenuItem fx:id="context" mnemonicParsing="false" onAction="#openMenuContext" text="Unspecified Action" />
+                    </items>
+                  </ContextMenu>
+               </contextMenu>
             </ScrollPane>
 
          </children>
